--- a/flavor.toml
+++ b/flavor.toml
@@ -37,8 +37,8 @@ border_style  = { fg = "#414868" }  # Darkened black
 # : Status {{{
 
 [status]
-separator_open  = ""
-separator_close = ""
+sep_left  = { open = "", close = "" }
+sep_right = { open = "", close = "" }
 separator_style = { fg = "#7aa2f7", bg = "#414868" }  # Blue on Darkened black
 
 # Mode
@@ -84,7 +84,7 @@ selected = { reversed = true }
 
 # : Completion {{{
 
-[completion]
+[cmp]
 border = { fg = "#7aa2f7" }  # Blue
 
 # : }}}
