--- a/flavor.toml
+++ b/flavor.toml
@@ -63,9 +63,9 @@ separator_style = { fg = "#414868", bg = "#414868" }  # Blue on Darkened black
 
 
 # Progress
-progress_label  = { fg = "#a9b1d6", bold = true }  # White
-progress_normal = { fg = "#7aa2f7", bg = "#414868" }  # Blue on Darkened black
-progress_error  = { fg = "#f7768e", bg = "#414868" }  # Red on Darkened black
+progress_label = { fg = "#1a1b26", bold = true }
+progress_normal = { fg = "#7aa2f7", bg = "#292e42" }
+progress_error = { fg = "#f7768e", bg = "#292e42" }
 
 # Permissions
 perm_sep   = { fg = "#7aa2f7" }  # Blue
