refactor: new [tabs] section (sxyazi/yazi#2745)

--- a/flavor.toml
+++ b/flavor.toml
@@ -19,11 +19,6 @@ marker_cut      = { fg = "#e0af68", bg = "#f7768e" }  # Red
 marker_marked   = { fg = "#7aa2f7", bg = "#7dcfff" }  # Cyan
 marker_selected = { fg = "#e0af68", bg = "#e0af68" }  # Yellow
 
-# Tab
-tab_active = { bg = "#282C34", fg = "#7aa2f7" }  # Darkened background, Blue text
-tab_inactive = {}
-tab_width    = 1
-
 # Count
 count_copied   = { fg = "#414868", bg = "#9ece6a" }  # Darkened black on Green
 count_cut      = { fg = "#414868", bg = "#e0af68" }  # Darkened black on Yellow
@@ -32,6 +27,15 @@ count_selected = { fg = "#414868", bg = "#7aa2f7" }  # Darkened black on Blue
 # Border
 border_symbol = "│"
 border_style  = { fg = "#414868" }  # Darkened black
+
+# : }}}
+
+
+# : Tabs {{{
+
+[tabs]
+active   = { fg = "#7aa2f7", bg = "#282C34", bold = true }
+inactive = { fg = "#282C34", bg = "#7aa2f7" }
 
 # : }}}
 
